tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var A1;
(function(A) {
    var B1;
    (function(B) {
        var C = function C() {
            "use strict";
            _classCallCheck(this, C);
        };
        B.C = C;
    })(B1 || (B1 = {
    }));
    A.B = B1;
})(A1 || (A1 = {
}));
var M21;
(function(M2) {
    var X1;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X1 || (X1 = {
    }));
    M2.X = X1;
})(M21 || (M21 = {
}));
